--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
       --darker-green: #002110;
       --cream: #f5f1e8;
       --font-base: 1rem;
+      --select-radius: 0.5rem;
+      --select-padding: 0.75rem 2.5rem 0.75rem 0.75rem;
+      --arrow-size: 0.75rem;
     }
-    * { box-sizing: border-box; margin:0; padding:0; }
+
+    *, *::before, *::after {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
     body {
       font-family: Arial, sans-serif;
       font-size: var(--font-base);
@@ -40,16 +48,13 @@
       position: absolute;
       bottom: -50px;
       animation: floatUp 5s ease-in infinite;
-      /* base size for mobile */
       font-size: 1rem;
     }
     @media (min-width: 768px) {
       .emoji-container span {
-        /* larger on tablets/laptops */
         font-size: 2rem;
       }
     }
-
     @keyframes floatUp {
       0% { transform: translateY(0) scale(1); opacity:1; }
       100% { transform: translateY(-120vh) scale(1.5); opacity:0; }
@@ -72,10 +77,41 @@
     }
     h1 { margin-bottom:1.5rem; font-size:1.75rem; }
     label { display:block; margin-bottom:0.5rem; font-weight:700; }
-    select {
-      width:100%; padding:0.75rem; border:none; border-radius:0.5rem;
-      font-size:1rem; margin-bottom:1rem;
+
+    /* Custom select wrapper */
+    .select-wrapper {
+      position: relative;
+      width: 100%;
+      margin-bottom: 1rem;
     }
+    .select-wrapper select {
+      width: 100%;
+      padding: var(--select-padding);
+      border: none;
+      border-radius: var(--select-radius);
+      font-size: 1rem;
+      background-color: var(--cream);
+      color: var(--dark-green);
+      appearance: none;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      transition: box-shadow 0.2s;
+    }
+    .select-wrapper select:focus {
+      outline: none;
+      box-shadow: 0 0 0 3px rgba(1, 50, 32, 0.3);
+    }
+    .select-wrapper::after {
+      content: '▼';
+      position: absolute;
+      top: 50%;
+      right: 1rem;
+      transform: translateY(-50%);
+      pointer-events: none;
+      font-size: var(--arrow-size);
+      color: var(--dark-green);
+    }
+
     button#getVerse {
       background-color: var(--cream); color: var(--dark-green);
       border:none; border-radius:0.5rem; padding:0.75rem 2rem;
@@ -118,17 +154,21 @@
 
   <main class="container" role="main">
     <h1>Discover Your Verse</h1>
+
     <label for="mood">Select Your Mood:</label>
-    <select id="mood" aria-label="Select your mood">
-      <option value="" disabled selected hidden>Choose your mood</option>
-      <option value="sad">Sad</option>
-      <option value="depressed">Depressed</option>
-      <option value="anxious">Anxious</option>
-      <option value="angry">Angry</option>
-      <option value="stressed">Stressed</option>
-      <option value="hopeful">Hopeful</option>
-      <option value="happy">Happy</option>
-    </select>
+    <div class="select-wrapper">
+      <select id="mood" aria-label="Select your mood">
+        <option value="" disabled selected hidden>Choose your mood</option>
+        <option value="sad">Sad</option>
+        <option value="depressed">Depressed</option>
+        <option value="anxious">Anxious</option>
+        <option value="angry">Angry</option>
+        <option value="stressed">Stressed</option>
+        <option value="hopeful">Hopeful</option>
+        <option value="happy">Happy</option>
+      </select>
+    </div>
+
     <button id="getVerse">Get Verse</button>
     <div class="verses animate__animated" id="versesContainer" aria-live="polite"></div>
   </main>
@@ -145,13 +185,8 @@
     };
 
     const moodEmojis = {
-      sad: '😢',
-      depressed: '😞',
-      anxious: '😰',
-      angry: '😡',
-      stressed: '😣',
-      hopeful: '😊',
-      happy: '😃'
+      sad: '😢', depressed: '😞', anxious: '😰',
+      angry: '😡', stressed: '😣', hopeful: '😊', happy: '😃'
     };
 
     const moodSelect = document.getElementById('mood');
@@ -175,14 +210,10 @@
       }
     }
 
-    // trigger emojis immediately on mood selection
+    // trigger emojis on mood change
     moodSelect.addEventListener('change', () => {
       const mood = moodSelect.value;
-      if (mappings[mood]) {
-        generateEmojis(mood);
-      } else {
-        clearEmojis();
-      }
+      mappings[mood] ? generateEmojis(mood) : clearEmojis();
     });
 
     getVerseBtn.addEventListener('click', () => {
@@ -200,7 +231,7 @@
       ['ar','ur','en'].forEach((lang, idx) => {
         const block = document.createElement('div');
         block.className = 'verse-block animate__animated animate__fadeInUp';
-        block.setAttribute('data-lang-label', lang === 'ar' ? 'Arabic' : lang === 'ur' ? 'Urdu' : 'English');
+        block.setAttribute('data-lang-label', { ar:'Arabic', ur:'Urdu', en:'English' }[lang]);
         block.setAttribute('tabindex', '0');
 
         const btn = document.createElement('button');
@@ -216,10 +247,8 @@
         text.className = 'verse-text';
         text.textContent = verse[lang];
 
-        block.appendChild(btn);
-        block.appendChild(text);
+        block.append(btn, text);
         versesContainer.appendChild(block);
-
         if (idx === 0) block.focus();
       });
 
